[package]
name = "bind_it"
version = "0.1.3"
edition = "2021"
description = "A macro that allows impl traits in let/static/const bindings until they actually stabilized"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
uuid = { version = "0.8.2", features = ["v4"] }


[dev-dependencies]
tokio = { version = "1.17", features = ["rt", "macros"] }